Add Athena client
Integrate the AWS Athena client package into the project.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,6 +3,7 @@
 packages:
   - packages/client-account
   - packages/client-api-gateway-management-api
+  - packages/client-athena
   - packages/client-auto-scaling
   - packages/client-bedrock
   - packages/client-bedrock-runtime
