--- a/packages/powertools-tracer/.gitignore
+++ b/packages/powertools-tracer/.gitignore
@@ -37,6 +37,7 @@ jspm_packages/
 /dist/
 !/tsconfig.src.json
 !/tsconfig.dev.json
+!/tsconfig.examples.json
 !/tsconfig.esm.json
 !/tsconfig.cjs.json
 !/docgen.json
