--- a/packages/powertools-tracer/package.json
+++ b/packages/powertools-tracer/package.json
@@ -27,6 +27,8 @@
   "devDependencies": {
     "@aws-lambda-powertools/commons": "2.0.0",
     "@aws-lambda-powertools/tracer": "2.0.0",
+    "@effect-aws/lambda": "workspace:^",
+    "@types/aws-lambda": "^8.10.125",
     "@types/node": "ts5.4",
     "effect": "3.10.16",
     "typescript": "^5.4.2"
