--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -34,6 +34,8 @@
     "effect": ">=3.0.4 <4.0.0"
   },
   "dependencies": {
+    "@smithy/protocol-http": "^5.0.1",
+    "@smithy/querystring-builder": "^4.0.1",
     "@smithy/smithy-client": "^4.1.6",
     "@smithy/types": "^4.1.0"
   },
