--- a/packages/http-handler/package.json
+++ b/packages/http-handler/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@effect-aws/commons",
-  "description": "Effectful AWS common library",
+  "name": "@effect-aws/http-handler",
+  "description": "Effectful AWS HTTP handler",
   "repository": {
     "type": "git",
     "url": "github:floydspace/effect-aws",
-    "directory": "packages/commons"
+    "directory": "packages/http-handler"
   },
   "scripts": {
     "build": "npx projen build",
@@ -25,27 +25,29 @@
     "organization": false
   },
   "devDependencies": {
-    "@aws-sdk/middleware-logger": "^3.775.0",
-    "@smithy/protocol-http": "^5.1.0",
+    "@effect-aws/commons": "workspace:^",
     "@types/node": "ts5.4",
     "effect": "3.10.16",
     "typescript": "^5.4.2"
   },
   "peerDependencies": {
+    "@effect-aws/commons": "workspace:^",
     "effect": ">=3.0.4 <4.0.0"
   },
   "dependencies": {
-    "@smithy/smithy-client": "^4.2.0",
-    "@smithy/types": "^4.1.0"
+    "@effect/platform": "0.69.25",
+    "@smithy/protocol-http": "^5.1.0",
+    "@smithy/querystring-builder": "^4.0.2",
+    "@smithy/types": "^4.2.0"
   },
   "main": "build/cjs/index.js",
   "license": "MIT",
-  "homepage": "https://floydspace.github.io/effect-aws/docs/commons",
+  "homepage": "https://floydspace.github.io/effect-aws/docs/http-handler",
   "publishConfig": {
     "access": "public",
     "directory": "dist"
   },
-  "version": "0.2.1",
+  "version": "0.0.0",
   "types": "build/dts/index.d.ts",
   "type": "module",
   "module": "build/esm/index.js",
