--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,12 @@
       "path": "packages/client-account"
     },
     {
+      "path": "packages/client-api-gateway"
+    },
+    {
+      "path": "packages/client-apigatewayv2"
+    },
+    {
       "path": "packages/client-api-gateway-management-api"
     },
     {
