--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,7 +2,9 @@
 
 packages:
   - packages/client-account
+  - packages/client-api-gateway
   - packages/client-api-gateway-management-api
+  - packages/client-api-gateway-v2
   - packages/client-athena
   - packages/client-auto-scaling
   - packages/client-bedrock
