--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -25,13 +25,17 @@
     "organization": false
   },
   "devDependencies": {
+    "@effect/platform": "^0.82.2",
+    "@effect/platform-node-shared": "^0.34.3",
     "@types/aws-lambda": "^8.10.149",
     "@types/node": "ts5.4",
     "effect": "^3.15.1",
     "typescript": "^5.4.2"
   },
   "peerDependencies": {
-    "effect": ">=3.15.0 <4.0.0"
+    "@effect/platform": ">=0.69.25",
+    "@effect/platform-node-shared": ">=0.19.26",
+    "effect": ">=3.0.4 <4.0.0"
   },
   "main": "build/cjs/index.js",
   "license": "MIT",
