chore: update pnpm task concurrency

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -8,7 +8,7 @@
           "exec": "tsc -b tsconfig.build.json"
         },
         {
-          "exec": "pnpm --recursive --parallel run build",
+          "exec": "pnpm --recursive  run build",
           "receiveArgs": true
         }
       ]
@@ -39,7 +39,7 @@
       "description": "Only compile for all affected projects",
       "steps": [
         {
-          "exec": "pnpm --recursive --parallel run compile",
+          "exec": "pnpm --recursive  run compile",
           "receiveArgs": true
         }
       ]
@@ -109,7 +109,7 @@
       "description": "Creates the distribution package for all affected projects",
       "steps": [
         {
-          "exec": "pnpm --recursive --parallel run package",
+          "exec": "pnpm --recursive  run package",
           "receiveArgs": true
         }
       ]
@@ -119,7 +119,7 @@
       "description": "Runs after successful compilation for all affected projects",
       "steps": [
         {
-          "exec": "pnpm --recursive --parallel run post-compile",
+          "exec": "pnpm --recursive  run post-compile",
           "receiveArgs": true
         }
       ]
@@ -129,7 +129,7 @@
       "description": "Prepare the project for compilation for all affected projects",
       "steps": [
         {
-          "exec": "pnpm --recursive --parallel run pre-compile",
+          "exec": "pnpm --recursive  run pre-compile",
           "receiveArgs": true
         }
       ]
@@ -158,7 +158,7 @@
       "description": "Watch & compile in the background for all affected projects",
       "steps": [
         {
-          "exec": "pnpm --recursive --parallel run watch",
+          "exec": "pnpm --recursive  run watch",
           "receiveArgs": true
         }
       ]
