--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@eslint/compat": "^1.2.5",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.19.0",
-    "@floydspace/projen-components": "next",
+    "@floydspace/projen-components": "^1.0.0",
     "@types/node": "ts5.4",
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
