--- a/packages/dynamodb/tsconfig.src.json
+++ b/packages/dynamodb/tsconfig.src.json
@@ -11,7 +11,10 @@
   ],
   "references": [
     {
-      "path": "../dynamodb"
+      "path": "../commons"
+    },
+    {
+      "path": "../client-dynamodb"
     }
   ]
 }
