--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -52,6 +52,7 @@ packages:
   - packages/client-timestream-query
   - packages/client-timestream-write
   - packages/commons
+  - packages/dynamodb
   - packages/http-handler
   - packages/lambda
   - packages/lib-dynamodb
