--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "tsx": "^4.16.5",
     "typescript": "^5.4.2",
     "vitepress": "^1.6.3",
+    "vitepress-plugin-group-icons": "^1.6.1",
     "vitest": "^3.1.1",
     "vitest-mock-extended": "^3.1.0"
   },
