--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -55,6 +55,9 @@
       "path": "packages/client-cognito-identity-provider/tsconfig.esm.json"
     },
     {
+      "path": "packages/client-dsql/tsconfig.esm.json"
+    },
+    {
       "path": "packages/client-dynamodb/tsconfig.esm.json"
     },
     {
