limit parallelization on docgen

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -57,7 +57,7 @@
       "name": "docgen",
       "steps": [
         {
-          "exec": "pnpm --recursive --parallel run docgen"
+          "exec": "pnpm --recursive run docgen"
         },
         {
           "exec": "node scripts/docs.mjs"
