--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -58,6 +58,7 @@ packages:
   - packages/http-handler
   - packages/lambda
   - packages/lib-dynamodb
+  - packages/powertools-batch
   - packages/powertools-logger
   - packages/powertools-tracer
   - packages/s3
