--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -100,6 +100,9 @@
       "path": "packages/client-iot-wireless/tsconfig.esm.json"
     },
     {
+      "path": "packages/client-ivs/tsconfig.esm.json"
+    },
+    {
       "path": "packages/client-kinesis/tsconfig.esm.json"
     },
     {
