feat: cloudformation client

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -9,6 +9,7 @@ packages:
   - packages/client-auto-scaling
   - packages/client-bedrock
   - packages/client-bedrock-runtime
+  - packages/client-cloudformation
   - packages/client-cloudsearch
   - packages/client-cloudtrail
   - packages/client-cloudwatch
