--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -37,6 +37,9 @@
       "path": "packages/client-cloudsearch/tsconfig.esm.json"
     },
     {
+      "path": "packages/client-cloudformation/tsconfig.esm.json"
+    },
+    {
       "path": "packages/client-cloudtrail/tsconfig.esm.json"
     },
     {
