--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -24,6 +24,7 @@ packages:
   - packages/client-elasticache
   - packages/client-eventbridge
   - packages/client-firehose
+  - packages/client-glue
   - packages/client-iam
   - packages/client-iot
   - packages/client-iot-data-plane
