--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -79,6 +79,9 @@
       "path": "packages/client-firehose/tsconfig.esm.json"
     },
     {
+      "path": "packages/client-glue/tsconfig.esm.json"
+    },
+    {
       "path": "packages/client-iam/tsconfig.esm.json"
     },
     {
