--- a/tsconfig.json
+++ b/tsconfig.json
@@ -84,6 +84,9 @@
       "path": "packages/client-firehose"
     },
     {
+      "path": "packages/client-glue"
+    },
+    {
       "path": "packages/client-iam"
     },
     {
