--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -16,6 +16,7 @@ packages:
   - packages/client-cloudwatch-logs
   - packages/client-codedeploy
   - packages/client-cognito-identity-provider
+  - packages/client-data-pipeline
   - packages/client-dsql
   - packages/client-dynamodb
   - packages/client-ec2
