--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -52,6 +52,9 @@
       "path": "packages/client-codedeploy/tsconfig.esm.json"
     },
     {
+      "path": "packages/client-data-pipeline/tsconfig.esm.json"
+    },
+    {
       "path": "packages/client-cognito-identity-provider/tsconfig.esm.json"
     },
     {
