--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -166,6 +166,12 @@
       "path": "packages/client-timestream-influxdb/tsconfig.esm.json"
     },
     {
+      "path": "packages/client-kafka/tsconfig.esm.json"
+    },
+    {
+      "path": "packages/client-kafkaconnect/tsconfig.esm.json"
+    },
+    {
       "path": "packages/dynamodb/tsconfig.esm.json"
     },
     {
