feat: create glue client (#187)
Co-authored-by: Victor Korzunin <5180700+floydspace@users.noreply.github.com>

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -25,6 +25,7 @@ packages:
   - packages/client-elasticache
   - packages/client-eventbridge
   - packages/client-firehose
+  - packages/client-glue
   - packages/client-iam
   - packages/client-iot
   - packages/client-iot-data-plane
