--- a/tsconfig.json
+++ b/tsconfig.json
@@ -60,6 +60,9 @@
       "path": "packages/client-codedeploy"
     },
     {
+      "path": "packages/client-data-pipeline"
+    },
+    {
       "path": "packages/client-cognito-identity-provider"
     },
     {
