--- a/packages/powertools-tracer/tsconfig.cjs.json
+++ b/packages/powertools-tracer/tsconfig.cjs.json
@@ -6,5 +6,10 @@
     "outDir": "build/cjs",
     "moduleResolution": "node",
     "module": "CommonJS"
-  }
+  },
+  "references": [
+    {
+      "path": "../lambda/tsconfig.cjs.json"
+    }
+  ]
 }
