--- a/packages/powertools-tracer/tsconfig.esm.json
+++ b/packages/powertools-tracer/tsconfig.esm.json
@@ -6,5 +6,10 @@
     "outDir": "build/esm",
     "declarationDir": "build/dts",
     "stripInternal": true
-  }
+  },
+  "references": [
+    {
+      "path": "../lambda/tsconfig.esm.json"
+    }
+  ]
 }
