--- a/packages/powertools-logger/package.json
+++ b/packages/powertools-logger/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@aws-lambda-powertools/commons": "2.0.0",
     "@aws-lambda-powertools/logger": "2.0.0",
+    "@effect-aws/lambda": "workspace:^",
     "@types/node": "ts5.4",
     "effect": "^3.16.4",
     "typescript": "^5.4.2"
