fix: handle undefined commands in Service.fromCommandsAndServiceFn

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
   "typescript.enablePromptUseWorkspaceTsdk": true,
   "editor.formatOnSave": true,
   "eslint.format.enable": true,
+  "bun.test.enable": false,
   "[json]": {
     "editor.defaultFormatter": "vscode.json-language-features"
   },
