--- a/packages/lambda/package.json
+++ b/packages/lambda/package.json
@@ -25,17 +25,15 @@
     "organization": false
   },
   "devDependencies": {
-    "@effect/platform": "^0.84.8",
-    "@effect/platform-node-shared": "^0.39.7",
+    "@effect/platform-node-shared": "4.0.0-beta.8",
     "@types/aws-lambda": "^8.10.159",
     "@types/node": "ts5.4",
-    "effect": "^3.16.4",
+    "effect": "4.0.0-beta.8",
     "typescript": "^5.4.2"
   },
   "peerDependencies": {
-    "@effect/platform": ">=0.83.0",
-    "@effect/platform-node-shared": ">=0.36.0",
-    "effect": ">=3.15.5 <4.0.0"
+    "@effect/platform-node-shared": ">=4.0.0 <5.0.0",
+    "effect": ">=4.0.0 <5.0.0"
   },
   "main": "build/cjs/index.js",
   "license": "MIT",
